loadtest-controller: add full load test integration test